Send request to OneFrame on currency rate request

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -4,5 +4,9 @@ app {
     port = 8080
     timeout = 40 seconds
   }
+  one-frame {
+    host = ${ONE_FRAME_HOST}
+    port = ${ONE_FRAME_PORT}
+    token = ${ONE_FRAME_TOKEN}
+  }
 }
-
