Add cache for rate api

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -5,8 +5,11 @@ app {
     timeout = 40 seconds
   }
   one-frame {
-    host = ${ONE_FRAME_HOST}
-    port = ${ONE_FRAME_PORT}
-    token = ${ONE_FRAME_TOKEN}
+    http {
+      host = ${ONE_FRAME_HOST}
+      port = ${ONE_FRAME_PORT}
+      token = ${ONE_FRAME_TOKEN}
+    }
+    cacheUpdateInterval = 2 minutes // should be more than 90 seconds and less than  290 seconds
   }
 }
