Add retry for OneFrameClient

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -10,6 +10,8 @@ app {
       port = ${ONE_FRAME_PORT}
       token = ${ONE_FRAME_TOKEN}
     }
-    cacheUpdateInterval = 2 minutes // should be more than 90 seconds and less than  290 seconds
+    cache-update-interval = 3 minutes // should be more than 90 seconds and less than  290 seconds
+    retry-count = 2
+    retry-delay = 20 second
   }
 }
